--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ parity-codec = '3.2'
 parking_lot = '0.7.1'
 tokio = '0.1'
 trie-root = '0.12.0'
+serde_json = "1.0"
 
 [dependencies.basic-authorship]
 git = 'https://github.com/paritytech/substrate.git'
