--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -27,6 +27,13 @@ authors = ['Parity Technologies <admin@parity.io>']
 edition = '2018'
 name = 'prochain-runtime'
 version = '1.0.0'
+
+
+[dev-dependencies]
+hex-literal = "0.2.0"
+libsecp256k1 = "0.2.1"
+tiny-keccak = "1.4.2"
+
 [dependencies.aura]
 default_features = false
 git = 'https://github.com/paritytech/substrate.git'
