add new modules

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,11 @@ std = [
     'safe-mix/std',
     'consensus-aura/std',
     'offchain-primitives/std',
+    'treasury/std',
+    'staking/std',
+    'session/std',
+    'democracy/std',
+    'council/std',
 ]
 
 [package]
@@ -156,4 +161,34 @@ rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
 default_features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'sr-version'
+rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+
+[dependencies.treasury]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-treasury'
+rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+
+[dependencies.staking]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-staking'
+rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+
+[dependencies.session]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-session'
+rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+
+[dependencies.democracy]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-democracy'
+rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+
+[dependencies.council]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-council'
 rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
