--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,50 +1,68 @@
 [package]
-authors = ['Parity Technologies <admin@parity.io>']
+authors = ['hlm']
 build = 'build.rs'
 edition = '2018'
 name = 'prochain'
-version = '1.0.0'
+version = '2.0.0'
+
+[build-dependencies]
+vergen = '3'
+
+[workspace]
+members = ['runtime']
 
 [dependencies]
-error-chain = '0.12'
+derive_more = '0.14.0'
 exit-future = '0.1'
 futures = '0.1'
-hex-literal = '0.1'
 log = '0.4'
-parity-codec = '3.2'
-parking_lot = '0.7.1'
+parking_lot = '0.9.0'
 tokio = '0.1'
-trie-root = '0.12.0'
+trie-root = '0.15.2'
 serde_json = "1.0"
+
+[dependencies.babe]
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-consensus-babe'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
+
+[dependencies.babe-primitives]
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-consensus-babe-primitives'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.basic-authorship]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-basic-authorship'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
-[dependencies.consensus]
-git = 'https://github.com/paritytech/substrate.git'
-package = 'substrate-consensus-aura'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
-
-[dependencies.grandpa]
-git = "https://github.com/paritytech/substrate.git"
-package = "substrate-finality-grandpa"
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+[dependencies.codec]
+package = 'parity-scale-codec'
+version = '1.0.0'
 
 [dependencies.ctrlc]
 features = ['termination']
 version = '3.0'
 
+[dependencies.grandpa]
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-finality-grandpa'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
+
+[dependencies.grandpa-primitives]
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-finality-grandpa-primitives'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
+
 [dependencies.inherents]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-inherents'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.network]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-network'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.prochain-runtime]
 path = 'runtime'
@@ -52,43 +70,40 @@ path = 'runtime'
 [dependencies.primitives]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-primitives'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.sr-io]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.substrate-cli]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.substrate-client]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.substrate-executor]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.substrate-service]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [dependencies.transaction-pool]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-transaction-pool'
-rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
-[build-dependencies]
-vergen = '3'
-[profile.release]
-panic = 'unwind'
+[dependencies.sr-primitives]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
 
 [[bin]]
 name = 'prochain'
 path = 'src/main.rs'
-
-[workspace]
-members = [
-    "runtime"
-]
+[profile.release]
+panic = 'unwind'
