--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -11,6 +11,7 @@ integer-sqrt = { version = "0.1.2" }
 rustc-hex = { version = "2.0", optional = true }
 safe-mix = { version = "1.0", default-features = false }
 serde = { version = "1.0.101", optional = true }
+harsh = { path = "../harsh", default-features = false }
 
 babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
 client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git", default-features = false }
