sync substrate 2.0 new modifications

--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -6,25 +6,33 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
+# third-party dependencies
+codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
 integer-sqrt = { version = "0.1.2" }
-rustc-hex = { version = "2.0", optional = true }
 safe-mix = { version = "1.0", default-features = false }
-serde = { version = "1.0.101", optional = true }
+rustc-hex = { version = "2.0", optional = true }
+serde = { version = "1.0.102", optional = true }
 harsh = { path = "../harsh", default-features = false }
 
+# primitives
 babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git", default-features = false }
 node-primitives = { path = "../primitives", default-features = false }
 offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
 primitives = { package = "substrate-primitives",  git = "https://github.com/ProChain/substrate.git", default-features = false }
-rstd = { package = "sr-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
 sr-primitives = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 sr-staking-primitives = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+
+# core dependencies
+sr-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
+block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
+tx-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
+rstd = { package = "sr-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
+version = { package = "sr-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
 substrate-keyring = { git = "https://github.com/ProChain/substrate.git", optional = true }
 substrate-session = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-version = { package = "sr-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
+# srml dependencies
 authorship = { package = "srml-authorship", git = "https://github.com/ProChain/substrate.git", default-features = false }
 babe = { package = "srml-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
 balances = { package = "srml-balances", git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -67,7 +75,7 @@ std = [
 	"babe-primitives/std",
 	"babe/std",
 	"balances/std",
-	"client/std",
+	"sr-api/std",
 	"codec/std",
 	"collective/std",
 	"contracts/std",
@@ -106,4 +114,7 @@ std = [
 	"transaction-payment/std",
 	"transaction-payment-rpc-runtime-api/std",
 	"version/std",
+	"block-builder-api/std",
+	"tx-pool-api/std",
+	"inherents/std",
 ]
