--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -22,36 +22,42 @@ required-features = ["cli"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-log = "0.4.8"
+# third-party dependencies
+codec = { package = "parity-scale-codec", version = "1.0.6" }
+serde = { version = "1.0.102", features = [ "derive" ] }
 futures = "0.1.29"
-jsonrpc-core = "14.0.3"
-codec = { package = "parity-scale-codec", version = "1.0.0" }
-sr-io = { git = "https://github.com/ProChain/substrate.git" }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
-inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git" }
-node-runtime = { path = "../runtime" }
-node-rpc = { path = "../rpc" }
-node-primitives = { path = "../primitives" }
 hex-literal = "0.2.1"
-substrate-rpc = { package = "substrate-rpc", git = "https://github.com/ProChain/substrate.git" }
-substrate-basic-authorship = { git = "https://github.com/ProChain/substrate.git" }
-substrate-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+jsonrpc-core = "14.0.3"
+log = "0.4.8"
+rand = "0.7.2"
+structopt = "0.3.3"
+
+# primitives
+primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
+sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git" }
+grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/ProChain/substrate.git" }
+
+# core dependencies
+runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
+inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git" }
 chain-spec = { package = "substrate-chain-spec", git = "https://github.com/ProChain/substrate.git" }
 transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
 network = { package = "substrate-network", git = "https://github.com/ProChain/substrate.git" }
 babe = { package = "substrate-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
-babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git" }
 grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/ProChain/substrate.git" }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
-node-executor = { path = "../executor" }
-substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/ProChain/substrate.git" }
-structopt = "0.3.3"
 keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
+client_db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
+offchain = { package = "substrate-offchain", git = "https://github.com/ProChain/substrate.git" }
+substrate-rpc = { package = "substrate-rpc", git = "https://github.com/ProChain/substrate.git" }
+substrate-basic-authorship = { git = "https://github.com/ProChain/substrate.git" }
+substrate-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/ProChain/substrate.git" }
+
+# srml dependencies
 indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git" }
 timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
-rand = "0.7.2"
 finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/ProChain/substrate.git", default-features = false }
 contracts = { package = "srml-contracts", git = "https://github.com/ProChain/substrate.git" }
 system = { package = "srml-system", git = "https://github.com/ProChain/substrate.git" }
@@ -59,9 +65,12 @@ balances = { package = "srml-balances", git = "https://github.com/ProChain/subst
 transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
 support = { package = "srml-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
 im_online = { package = "srml-im-online", git = "https://github.com/ProChain/substrate.git", default-features = false }
-serde = { version = "1.0.101", features = [ "derive" ] }
-client_db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
-offchain = { package = "substrate-offchain", git = "https://github.com/ProChain/substrate.git" }
+
+# node-specific dependencies
+node-runtime = { path = "../runtime" }
+node-rpc = { path = "../rpc" }
+node-primitives = { path = "../primitives" }
+node-executor = { path = "../executor" }
 
 # CLI-specific dependencies
 tokio = { version = "0.1.22", optional = true }
@@ -71,7 +80,7 @@ transaction-factory = { path = "../../test-utils/transaction-factory", optional 
 ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
 
 # WASM-specific dependencies
-libp2p = { version = "0.12.0", default-features = false, optional = true }
+libp2p = { version = "0.13.0", default-features = false, optional = true }
 clear_on_drop = { version = "0.2.3", features = ["no_cc"], optional = true }	# Imported just for the `no_cc` feature
 console_error_panic_hook = { version = "0.1.1", optional = true }
 console_log = { version = "0.1.2", optional = true }
@@ -91,6 +100,7 @@ tempfile = "3.1.0"
 
 [build-dependencies]
 substrate-cli = { package = "substrate-cli", git = "https://github.com/ProChain/substrate.git" }
+build-script-utils = { package = "substrate-build-script-utils", path = "../../core/utils/build-script-utils" }
 structopt = "0.3.3"
 vergen = "3.0.4"
 
