--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -31,7 +31,15 @@ contracts = { package = "srml-contracts", git = "https://github.com/ProChain/sub
 grandpa = { package = "srml-grandpa", git = "https://github.com/ProChain/substrate.git" }
 indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
+criterion = "0.3.0"
 
 [features]
-benchmarks = []
+wasmtime = [
+    "substrate-executor/wasmtime",
+]
 stress-test = []
+
+[[bench]]
+name = "bench"
+harness = false
+
