--- a/node/testing/Cargo.toml
+++ b/node/testing/Cargo.toml
@@ -29,3 +29,4 @@ timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/sub
 treasury = { package = "srml-treasury", git = "https://github.com/ProChain/substrate.git" }
 transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
+hex-literal = "0.2.1"
