--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Parity Technologies <admin@parity.io>"]
 description = "Substrate node implementation in Rust."
 build = "build.rs"
 edition = "2018"
-default-run = "substrate"
+default-run = "prochain"
 
 [badges]
 travis-ci = { repository = "paritytech/substrate", branch = "master" }
@@ -14,7 +14,7 @@ is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
 is-it-maintained-open-issues = { repository = "paritytech/substrate" }
 
 [[bin]]
-name = "substrate"
+name = "prochain"
 path = "bin/main.rs"
 required-features = ["cli"]
 
