--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -20,16 +20,16 @@ node-runtime = { path = "../runtime" }
 node-testing = { path = "../testing" }
 test-client = { package = "substrate-test-client", git = "https://github.com/ProChain/substrate.git" }
 sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
-runtime_support = { package = "srml-support", git = "https://github.com/ProChain/substrate.git" }
-balances = { package = "srml-balances", git = "https://github.com/ProChain/substrate.git" }
-transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
-session = { package = "srml-session", git = "https://github.com/ProChain/substrate.git" }
-system = { package = "srml-system", git = "https://github.com/ProChain/substrate.git" }
-timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/substrate.git" }
-treasury = { package = "srml-treasury", git = "https://github.com/ProChain/substrate.git" }
-contracts = { package = "srml-contracts", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { package = "srml-grandpa", git = "https://github.com/ProChain/substrate.git" }
-indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git" }
+runtime_support = { package = "palette-support", git = "https://github.com/ProChain/substrate.git" }
+balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git" }
+transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
+session = { package = "pallet-session", git = "https://github.com/ProChain/substrate.git" }
+system = { package = "palette-system", git = "https://github.com/ProChain/substrate.git" }
+timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git" }
+treasury = { package = "pallet-treasury", git = "https://github.com/ProChain/substrate.git" }
+contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git" }
+grandpa = { package = "pallet-grandpa", git = "https://github.com/ProChain/substrate.git" }
+indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
 criterion = "0.3.0"
 
