--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -10,7 +10,7 @@ jsonrpc-core = "14.0.3"
 node-primitives = { path = "../primitives" }
 node-runtime = { path = "../runtime" }
 sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
-srml-contracts-rpc = { git = "https://github.com/ProChain/substrate.git" }
-srml-transaction-payment-rpc = { git = "https://github.com/ProChain/substrate.git" }
-srml-system-rpc = { git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-rpc = { git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment-rpc = { git = "https://github.com/ProChain/substrate.git" }
+palette-system-rpc = { git = "https://github.com/ProChain/substrate.git" }
 transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
