--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ members = [
 	"test/utils/transaction-factory",
 	"utils/build-script-utils",
 	"utils/fork-tree",
+	"utils/frame/rpc/support",
+	"utils/frame/rpc/system",
 	"utils/wasm-builder"
 ]
 
