--- a/test/utils/runtime/client/Cargo.toml
+++ b/test/utils/runtime/client/Cargo.toml
@@ -10,6 +10,7 @@ generic-test-client = { package = "substrate-test-client", git = "https://github
 primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
 runtime = { package = "substrate-test-runtime", path = "../../runtime" }
 sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
 client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
 client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
