--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -12,6 +12,10 @@ integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.102", optional = true }
+harsh = { path = "../harsh", default-features = false }
+simple-json = { package = "simple-json", git = "https://github.com/jingleizhang/simple-json.git", optional = true }
+ethabi = { package = "ethabi", git = "https://github.com/paritytech/ethabi", optional = true }
+## log = { version = '0.4.8' }
 
 # primitives
 authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -104,9 +108,11 @@ std = [
 	"randomness-collective-flip/std",
 	"rstd/std",
 	"rustc-hex",
+	'runtime-io/std',
 	"safe-mix/std",
 	"serde",
 	"session/std",
+	"simple-json",
 	"sr-api/std",
 	"sr-primitives/std",
 	"sr-staking-primitives/std",
