--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ members = [
 	"bin/node/primitives",
 	"bin/node/rpc-client",
 	"bin/node/rpc",
+	"bin/node/modules/did",
+	"bin/node/modules/ads",
 	"bin/node/runtime",
 	"bin/node/testing",
 	"test/utils/chain-spec-builder",
