--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -12,7 +12,6 @@ integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.102", optional = true }
-harsh = { path = "../harsh", default-features = false }
 
 # primitives
 authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -63,6 +62,10 @@ utility = { package = "frame-utility", git = "https://github.com/ProChain/substr
 transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git", default-features = false }
 transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
 runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
+
+# inner dependencies
+did = { path = "../modules/did", default-features = false }
+ads = { path = "../modules/ads", default-features = false }
 
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
@@ -121,4 +124,6 @@ std = [
 	"tx-pool-api/std",
 	"utility/std",
 	"version/std",
+	"did/std",
+	"ads/std",
 ]
