--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -13,7 +13,7 @@ safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.102", optional = true }
 harsh = { path = "../harsh", default-features = false }
-simple-json = { package = "simple-json", git = "https://github.com/jingleizhang/simple-json.git", optional = true }
+simple-json = { version = '0.1.0', git = "https://github.com/jingleizhang/simple-json.git", optional = true }
 ethabi = { package = "ethabi", git = "https://github.com/paritytech/ethabi", optional = true }
 ## log = { version = '0.4.8' }
 
@@ -94,6 +94,7 @@ std = [
 	"democracy/std",
 	"elections-phragmen/std",
 	"executive/std",
+	"ethabi",
 	"finality-tracker/std",
 	"grandpa/std",
 	"im-online/std",
