--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -11,8 +11,8 @@ codec = { package = "parity-scale-codec", version = "1.0.6", default-features = 
 integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
-serde = { version = "1.0.102", optional = true }
-simple-json = { version = '0.1.0', git = "https://github.com/xlc/lite-json.git", default-features = false }
+serde = { version = "1.0", features = ["derive"], optional = true }
+simple-json = { version = '0.1.1', git = "https://github.com/jimmychu0807/simple-json.git", default-features = false }
 
 # primitives
 authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -107,7 +107,7 @@ std = [
 	"rustc-hex",
 	'runtime-io/std',
 	"safe-mix/std",
-	"serde",
+	"serde/std",
 	"session/std",
 	"simple-json/std",
 	"sp-api/std",
